--- a/facefusion.ini
+++ b/facefusion.ini
@@ -3,7 +3,7 @@ temp_path =
 jobs_path =
 source_paths =
 target_path =
-output_path =
+output_path = D:\My Shxt\p\o
 
 [patterns]
 source_pattern =
@@ -11,7 +11,7 @@ target_pattern =
 output_pattern =
 
 [face_detector]
-face_detector_model =
+face_detector_model = scrfd
 face_detector_size =
 face_detector_angles =
 face_detector_score =
@@ -21,7 +21,7 @@ face_landmarker_model =
 face_landmarker_score =
 
 [face_selector]
-face_selector_mode =
+face_selector_mode = many
 face_selector_order =
 face_selector_age_start =
 face_selector_age_end =
@@ -32,11 +32,11 @@ reference_face_distance =
 reference_frame_number =
 
 [face_masker]
-face_occluder_model =
+face_occluder_model = 
 face_parser_model =
-face_mask_types =
+face_mask_types = occlusion
 face_mask_blur =
-face_mask_padding =
+face_mask_padding = 10 10 32 10
 face_mask_regions =
 
 [frame_extraction]
@@ -46,7 +46,7 @@ temp_frame_format =
 keep_temp =
 
 [output_creation]
-output_image_quality =
+output_image_quality = 
 output_image_resolution =
 output_audio_encoder =
 output_video_encoder =
@@ -57,7 +57,7 @@ output_video_fps =
 skip_audio =
 
 [processors]
-processors =
+processors = face_swapper face_enhancer
 age_modifier_model =
 age_modifier_direction =
 deep_swapper_model =
@@ -80,10 +80,10 @@ face_editor_mouth_position_vertical =
 face_editor_head_pitch =
 face_editor_head_yaw =
 face_editor_head_roll =
-face_enhancer_model =
+face_enhancer_model = gfpgan_1.4
 face_enhancer_blend =
 face_enhancer_weight =
-face_swapper_model =
+face_swapper_model = inswapper_128_fp16
 face_swapper_pixel_boost =
 frame_colorizer_model =
 frame_colorizer_size =
@@ -98,18 +98,18 @@ ui_layouts =
 ui_workflow =
 
 [execution]
-execution_device_id =
+execution_device_id = 1
 execution_providers =
-execution_thread_count =
-execution_queue_count =
+execution_thread_count = 4
+execution_queue_count = 1
 
 [download]
 download_providers =
 download_scope =
 
 [memory]
-video_memory_strategy =
-system_memory_limit =
+video_memory_strategy = tolerant
+system_memory_limit = 16
 
 [misc]
 log_level =
