--- a/facefusion.ini
+++ b/facefusion.ini
@@ -3,7 +3,7 @@ temp_path =
 jobs_path =
 source_paths =
 target_path =
-output_path = D:\My Shxt\p\o
+output_path = /tmp
 
 [patterns]
 source_pattern =
@@ -14,11 +14,11 @@ output_pattern =
 face_detector_model = scrfd
 face_detector_size =
 face_detector_angles =
-face_detector_score =
+face_detector_score = 0.25
 
 [face_landmarker]
 face_landmarker_model =
-face_landmarker_score =
+face_landmarker_score = 0.25
 
 [face_selector]
 face_selector_mode = many
@@ -46,12 +46,12 @@ temp_frame_format =
 keep_temp =
 
 [output_creation]
-output_image_quality = 
+output_image_quality =  100
 output_image_resolution =
 output_audio_encoder =
 output_video_encoder =
 output_video_preset =
-output_video_quality =
+output_video_quality = 100
 output_video_resolution =
 output_video_fps =
 skip_audio =
